[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.152941, 0.733333, 0.380392, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Login_panel" type="Panel" parent="."]
self_modulate = Color( 0.670588, 0.909804, 0.980392, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -234.0
margin_right = 142.0
margin_bottom = 234.0

[node name="Label" type="Label" parent="Login_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.0
margin_top = 40.0
margin_right = 35.0
margin_bottom = 54.0
text = "User Name"

[node name="LineEdit" type="LineEdit" parent="Login_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -79.0
margin_top = 72.0
margin_right = 79.0
margin_bottom = 96.0

[node name="Login_button" type="Button" parent="Login_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -10.0
margin_right = 37.0
margin_bottom = 10.0
text = "Login"

[node name="App" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -260.0
margin_right = 260.0
margin_bottom = 260.0

[node name="Update_button" type="Button" parent="App"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -100.0
margin_right = 106.0
margin_bottom = -80.0
text = "Update"

[node name="Label3" type="Label" parent="App"]
margin_left = 32.0
margin_top = 64.0
margin_right = 150.0
margin_bottom = 95.0
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="App"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -272.0
margin_top = 64.0
margin_right = -154.0
margin_bottom = 95.0
text = "JSON Info 
from online server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="App"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -288.0
margin_top = 121.0
margin_right = -33.0
margin_bottom = -65.0

[node name="Label2" type="Label" parent="App"]
margin_left = 40.0
margin_top = 224.0
margin_right = 105.0
margin_bottom = 238.0
text = "Input Text"

[node name="LineEdit" type="LineEdit" parent="App"]
margin_left = 28.0
margin_top = 248.0
margin_right = 126.0
margin_bottom = 272.0

[node name="LoginRequest" type="HTTPRequest" parent="."]

[node name="UpdateRequest" type="HTTPRequest" parent="."]

[node name="Back" type="Button" parent="."]
margin_left = 8.0
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
text = "Back"

[connection signal="pressed" from="Login_panel/Login_button" to="." method="_on_Login_button_pressed"]
[connection signal="visibility_changed" from="App" to="." method="_on_App_visibility_changed"]
[connection signal="pressed" from="App/Update_button" to="." method="_on_Update_button_pressed"]
[connection signal="request_completed" from="LoginRequest" to="." method="_on_LoginRequest_request_completed"]
[connection signal="request_completed" from="UpdateRequest" to="." method="_on_UpdateRequest_request_completed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
